<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifyotp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curvedbgfull"
        android:orientation="vertical"
        android:layout_gravity="center">
    <ImageView
        android:layout_width="235dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/medicologo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="120dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="#FFFFFF"
                android:textSize="50dp"
                android:textStyle="bold" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <EditText
            android:id="@+id/codeText"
            android:layout_width="275dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/enter_otp"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:textColorHint="#9D90D0"
            android:textSize="20dp" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/registerbtn1"
            android:text="@string/confrim"
            android:textColor="#FFF"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>