<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curvedbgfull"
    android:fadingEdge="horizontal|vertical|none"
    android:orientation="vertical">

    <ImageView
        android:layout_width="235dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/medicologo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:gravity="fill_horizontal|center_vertical|end"
            android:orientation="vertical"
            android:paddingTop="140dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:text="@string/enter_email_address"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/forgotEmail"
                android:layout_width="275dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:textColorHint="#9D90D0"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/forgotBtnConfirm"
                    android:layout_width="134dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/registerbtn1"
                    android:text="@string/confirm_btn"
                    android:textColor="#FFF"
                    android:textStyle="bold" />
            </LinearLayout>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:id="@+id/pbar"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>